PrintDialog: Fix overflow of error text

--- a/timApp/static/scripts/tim/printing/print-dialog.component.scss
+++ b/timApp/static/scripts/tim/printing/print-dialog.component.scss
@@ -15,3 +15,8 @@
   hyphens: auto;
 
 }
+
+:host ::ng-deep tim-alert pre {
+  max-height: 50vh;
+  overflow: auto;
+}
